@@ -11,6 +11,7 @@ class CMusicAlbumInfo
 public:
   CMusicAlbumInfo(void);
   CMusicAlbumInfo(const CStdString& strAlbumInfo, const CStdString& strAlbumURL);
+  CMusicAlbumInfo(const CStdString& strAlbum, const CStdString& strArtist, const CStdString& strAlbumInfo, const CStdString& strAlbumURL);
   virtual ~CMusicAlbumInfo(void);
   void Save(CStdString& strFileName);
   bool Load(CStdString& strFileName);
