@@ -11,7 +11,8 @@ class CMusicInfoScraper : public CThread
 public:
   CMusicInfoScraper(void);
   virtual ~CMusicInfoScraper(void);
-  void FindAlbuminfo(const CStdString& strAlbum);
+  //void FindAlbuminfo(const CStdString& strAlbum);
+  void FindAlbuminfo(const CStdString& strAlbum, const CStdString& strArtist = "");
   void LoadAlbuminfo(int iAlbum);
   bool Completed();
   bool Successfull();
@@ -26,6 +27,7 @@ protected:
   virtual void Process();
   vector<CMusicAlbumInfo> m_vecAlbums;
   CStdString m_strAlbum;
+  CStdString m_strArtist;
   int m_iAlbum;
   bool m_bSuccessfull;
   bool m_bCanceled;
